Fixed an overlap issue with leaflet's map attribution element

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,9 @@ body {
 .darken {
   filter: brightness(85%);
 }
-
+.leaflet-control-attribution {
+  display: none;
+}
 /* LOADING ANIMATION (takes up a limited amount of space) */
 div.loader {
   display: flex;
